--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "iview": "^2.14.3",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
